Add Infinitus GO

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -56,9 +56,9 @@
             <div class="content center">
                 <div class="container">
                     <p>Hello, It's me</p>
-                    <h1><%= @user.name %></h1>
-                    <p><%= @user.formation %> - <%= @user.position %></p>
-                    <%= link_to "Resume .pdf", 'https://github.com/ftuyama/Portfolio/raw/master/public/resume.pdf' %>
+                    <h1>Felipe Tuyama</h1>
+                    <p>Computer Engineer - Software Developer</p>
+                    <a href='https://github.com/ftuyama/Portfolio/raw/master/public/resume.pdf'>Resume .pdf</a>
                     <a href="#portfolio">my works</a>
                 </div>
                 <!-- End container -->
@@ -109,9 +109,9 @@
                     <%= image_tag("https://avatars2.githubusercontent.com/u/11530478?s=460&v=4", alt: "Github image", height: '75px', style: 'margin: -50px 0 0 100px') %>
                 </div>
                 <div class="introduction col-sm-8 col-xs-12 wow fadeInUp" data-wow-duration="0.5s" data-wow-offset="200" style="animation-duration: 0.5s; animation-name: none;">
-                    <h2 class="h2"><%= @user.name %></h2>
+                    <h2 class="h2">Felipe Tuyama</h2>
                     <div class="heading-line"></div>
-                    <p class="introduce">talented <%= @user.formation %> / <%= @user.position %></p>
+                    <p class="introduce">talented Computer Engineer / Software Developer</p>
                     <p class="intro">Enthusiastically reintermediate leveraged potentialities and wireless web services. Distinctively maintain ubiquitous best practices through market positioning materials. Progressively reintermediate ubiquitous channels via bricks-and-clicks
                         technology. Distinctively formulate innovative relationships and high standards.</p>
                 </div>
@@ -121,12 +121,12 @@
                     <h3>personal info</h3>
                     <div class="heading-line"></div>
                     <div class="personal-wrapper">
-                        <span><strong>name: </strong><%= @user.name %></span>
+                        <span><strong>name: </strong>Felipe Tuyama</span>
                         <span><strong>graduation: </strong>ITA (T-17)</span>
-                        <a href="https://github.com/<%= @user.github %>" class="icon gh ion-social-github"></a>
+                        <a href="https://github.com/ftuyama" class="icon gh ion-social-github"></a>
                         <a href="https://br.linkedin.com/in/felipe-tuyama" class="icon li ion-social-linkedin"></a>
                         <span><strong>website:</strong>
-                            <a class="blue-link" href="https://github.com/<%= @user.github %>">www.github.com/<%= @user.github %></a><br>
+                            <a class="blue-link" href="https://github.com/ftuyama">www.github.com/ftuyama</a><br>
                             <a class="blue-link" href="https://br.linkedin.com/in/felipe-tuyama">https://www.linkedin.com/in/felipe-tuyama</a>
                         </span>
                     </div>
@@ -251,16 +251,36 @@
                         <p>Internship as a full-stack web developer using Ruby on Rails framework and agile software development. Joined the content team to improve and completely refactor the team’s section on the site, using technologies such as Sidekiq, Chef recipes and Docker.</p>
                     </div>
                 </div>
-                <!-- Event No. 3 -->
+                <!-- Event No. 4 -->
                 <div class="timeline-block clearfix wow fadeInRight" data-wow-duration="2.0s" data-wow-offset="200" style="animation-duration: 0.5s; animation-name: none;">
                     <div class="icon">
                         <i class="ion-briefcase"></i>
                     </div>
                     <div class="content right round-corners">
                         <h3><a href="http://quero.education">Quero Bolsa</a></h3>
-                        <span class="duration">( Jan. 2018 : Now )</span>
+                        <span class="duration">( Jan. 2018 : Jun. 2019 )</span>
                         <span class="job-title"> Full-Stack Web Developer</span>
                         <p>Full-stack web developer using Ruby on Rails + Phoenix framework and agile software development. Joined the visits team working on a massive events API built with Elixir, faced many challenges using asynchronous jobs, SQL queries and GTM.</p>
+                    </div>
+                </div>
+                <!-- Event No. 5 -->
+                <div class="timeline-block clearfix wow fadeInLeft" data-wow-duration="1.5s" data-wow-offset="200" style="animation-duration: 0.5s; animation-name: none;">
+                    <div class="icon">
+                        <i class="ion-briefcase"></i>
+                    </div>
+                    <div class="content left round-corners">
+                        <h3><a href="https://infinitusgo.com">Infinitus GO</a></h3>
+                        <span class="duration">( Jun. 2019 : Now )</span>
+                        <span class="job-title"> Software Developer</span>
+                        <p>
+                            Software developer responsible (along my co-worker) for building cryptocurrency financial
+                            market application, on several platforms (web, backend intensive, mobile, chrome extension).
+                        </p>
+                        <p>
+                            Built tools such as a complete Trading platform using Angular, Spring and Elixir; A mobile
+                            portfolio app using Flutter technology; And many different investment robots using Python 3
+                            and integrated to famous exchanges like Binance, Huobi and Blockchain.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -912,7 +932,7 @@
                     <div class="icon-wrapper center">
                         <a href="#" class="icon fb ion-social-facebook"></a>
                         <a href="#" class="icon tw ion-social-twitter"></a>
-                        <a href="https://github.com/<%= @user.github %>" class="icon gh ion-social-github"></a>
+                        <a href="https://github.com/ftuyama" class="icon gh ion-social-github"></a>
                         <a href="https://br.linkedin.com/in/felipe-tuyama" class="icon li ion-social-linkedin"></a>
                     </div>
                 </div>
