Icons with hover

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
 
     <title>Felipe Tuyama</title>
 
-    <meta name="description" content="Felipe Tuyama (born 10 Nov 1994) is a Computer Engineer graduated from ITA (Technological Institute of Aeronautics) in 2017. This portfolio website contains more information about his professional profile.">
+    <meta name="description" content="Felipe Tuyama (born 10 Nov 1994) is a Computer Engineer graduated on ITA (Technological Institute of Aeronautics) in 2017. This portfolio website contains more information about his professional profile.">
     <meta name="keywords" content="Felipe Tuyama,ftuyama,tuyama,felipe-tuyama,Felipe Tuyama de Faria Barbosa,site">
     <meta name="author" content="Felipe Tuyama">
 
@@ -80,14 +80,15 @@
         </div>
         <div class="side-menu" id="side-menu">
             <!-- Menu items -->
+            <br>
+            <br>
             <a href="#header">Home</a>
             <a href="#about-me">about me</a>
-            <a href="#services">services</a>
-            <a href="#skills">skills</a>
             <a href="#experiences">experiences</a>
             <a href="#portfolio">Portfolio</a>
-            <a href="#testmonials">testmonials</a>
             <a href="#contact-me">Contact Me</a>
+            <a href="#skills">skills</a>
+            <a href="#services">services</a>
         </div>
         <div class="right-menu">
             <!-- Void -->
@@ -123,11 +124,16 @@
                     <div class="personal-wrapper">
                         <span><strong>name: </strong>Felipe Tuyama</span>
                         <span><strong>graduation: </strong>ITA (T-17)</span>
-                        <a href="https://github.com/ftuyama" class="icon gh ion-social-github"></a>
-                        <a href="https://br.linkedin.com/in/felipe-tuyama" class="icon li ion-social-linkedin"></a>
                         <span><strong>website:</strong>
-                            <a class="blue-link" href="https://github.com/ftuyama">www.github.com/ftuyama</a><br>
-                            <a class="blue-link" href="https://br.linkedin.com/in/felipe-tuyama">https://www.linkedin.com/in/felipe-tuyama</a>
+                            <a href="https://github.com/ftuyama" class="site-link">
+                                <i class="black-icon icon gh ion-social-github"></i>
+                                <span>Github</span>
+                            </a>
+                            <br>
+                            <a href="https://br.linkedin.com/in/felipe-tuyama" class="site-link">
+                                <i class="black-icon icon gh ion-social-linkedin"></i>
+                                <span>Linkedin</span>
+                            </a>
                         </span>
                     </div>
                 </div>
@@ -931,7 +937,7 @@
                     <!-- Social links -->
                     <div class="icon-wrapper center">
                         <a href="#" class="icon fb ion-social-facebook"></a>
-                        <a href="#" class="icon tw ion-social-twitter"></a>
+                        <a href="https://twitter.com/felipetuyama" class="icon tw ion-social-twitter"></a>
                         <a href="https://github.com/ftuyama" class="icon gh ion-social-github"></a>
                         <a href="https://br.linkedin.com/in/felipe-tuyama" class="icon li ion-social-linkedin"></a>
                     </div>
