--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -40,3 +40,14 @@
 :root #header+#content>#left>#rlblock_left {
     display: none !important;
 }
+
+.black-icon {
+    color: black;
+    font-size: 24px;
+    margin-right: 4px;
+    vertical-align: middle;
+}
+
+.site-link:hover * {
+    color: blue !important;
+}
