--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -103,7 +103,7 @@
                 <!-- Profile Pic -->
                 <div class="my-pic center col-sm-4 col-xs-12 wow fadeInUp" data-wow-duration="0.5s" data-wow-offset="200" style="animation-duration: 0.5s; animation-name: none;">
                     <img src="assets/me.jpg" alt="Profile image">
-                    <%= image_tag("https://avatars2.githubusercontent.com/u/11530478?s=460&v=4", alt: "Github image", height: '75px', style: 'margin: -50px 0 0 100px') %>
+                    <img src="https://avatars2.githubusercontent.com/u/11530478?s=460&v=4" alt="Github image" height='75px' style="margin: -50px 0 0 100px">
                 </div>
                 <div class="introduction col-sm-8 col-xs-12 wow fadeInUp" data-wow-duration="0.5s" data-wow-offset="200" style="animation-duration: 0.5s; animation-name: none;">
                     <h2 class="h2">Felipe Tuyama</h2>
@@ -329,207 +329,17 @@
     </div>
     <!-- End Portfolio Section -->
 
-      <!-- Start Quote Section -->
-      <div class="quote">
-          <div class="overlay"></div>
-          <div class="container">
-              <div class="qoute-wrapper">
-                  <p class="words"><span class="quote-mark open">"</span>If you believe in victory, then victory will believe in you.<span class="quote-mark end">"</span></p>
-                  <p class="author">- Paulo Coelho -</p>
-              </div>
-          </div>
-      </div>
-      <!-- End Quote Section -->
-
-    <!-- Start Testmonials Section -->
-    <div class="testmonials center hidden" id="testmonials">
+    <!-- Start Quote Section -->
+    <div class="quote">
         <div class="overlay"></div>
-        <div class="pattern"></div>
         <div class="container">
-            <div class="test-owl owl-carousel owl-theme owl-responsive-0 owl-loaded">
-                <!-- Clinent No.1 -->
-
-                <!-- Clinent No.2 -->
-
-                <!-- Clinent No.3 -->
-
-                <!-- Clinent No.4 -->
-
-                <!-- Clinent No.5 -->
-
-                <div class="owl-stage-outer">
-                    <div class="owl-stage" style="transform: translate3d(-8050px, 0px, 0px); transition: 0.25s; width: 10350px;">
-                        <div class="owl-item cloned" style="width: 1140px; margin-right: 10px;">
-                            <div class="client">
-                                <h3>- Adams kidman -</h3><span><%= @user.position %></span>
-                                <div class="stars">
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                </div>
-                                <div class="opinion">
-                                    <i class="ion-quote"></i>
-                                    <p>Compellingly evolve future-proof total linkage via team driven information. Authoritatively maximize B2C paradigms rather than diverse channels. Dynamically pontificate B2C solutions whereas enterprise human capital.
-                                        Interactively incentivize client-focused e-services.</p>
-                                    <i class="ion-quote reversed"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="owl-item cloned" style="width: 1140px; margin-right: 10px;">
-                            <div class="client">
-                                <h3>- Jessie J -</h3><span>ui / ux designer</span>
-                                <div class="stars">
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                </div>
-                                <div class="opinion">
-                                    <i class="ion-quote"></i>
-                                    <p>Credibly aggregate low-risk high-yield opportunities after e-business expertise. Distinctively brand front-end sources with bricks-and-clicks supply chains. Rapidiously engineer ubiquitous e-commerce rather than virtual
-                                        process.</p>
-                                    <i class="ion-quote reversed"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="owl-item" style="width: 1140px; margin-right: 10px;">
-                            <div class="client">
-                                <h3>- Kenny John -</h3><span>UI designer</span>
-                                <div class="stars">
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star-half"></span>
-                                </div>
-                                <div class="opinion">
-                                    <i class="ion-quote"></i>
-                                    <p>Professionally expedite clicks-and-mortar methods of empowerment through excellent convergence. Efficiently strategize user friendly e-commerce before technically sound interfaces. Professionally harness one-to-one
-                                        outsourcing whereas future-proof.</p>
-                                    <i class="ion-quote reversed"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="owl-item" style="width: 1140px; margin-right: 10px;">
-                            <div class="client">
-                                <h3>- Will hans -</h3><span>Ux designer</span>
-                                <div class="stars">
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star-half"></span>
-                                </div>
-                                <div class="opinion">
-                                    <i class="ion-quote"></i>
-                                    <p>Assertively innovate technically sound process improvements with best-of-breed users. Seamlessly matrix dynamic processes rather than multimedia based scenarios. Seamlessly myocardinate front-end e-commerce vis-a-vis
-                                        state of the art core competencies. Energistically create intermandated models.</p>
-                                    <i class="ion-quote reversed"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="owl-item" style="width: 1140px; margin-right: 10px;">
-                            <div class="client">
-                                <h3>- william hannah -</h3><span>visual designer</span>
-                                <div class="stars">
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                </div>
-                                <div class="opinion">
-                                    <i class="ion-quote"></i>
-                                    <p>Globally integrate resource maximizing information through economically sound results. Enthusiastically generate functionalized applications rather than quality imperatives. Monotonectally deploy integrated products.</p>
-                                    <i class="ion-quote reversed"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="owl-item" style="width: 1140px; margin-right: 10px;">
-                            <div class="client">
-                                <h3>- Adams kidman -</h3><span><%= @user.position %></span>
-                                <div class="stars">
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                </div>
-                                <div class="opinion">
-                                    <i class="ion-quote"></i>
-                                    <p>Compellingly evolve future-proof total linkage via team driven information. Authoritatively maximize B2C paradigms rather than diverse channels. Dynamically pontificate B2C solutions whereas enterprise human capital.
-                                        Interactively incentivize client-focused e-services.</p>
-                                    <i class="ion-quote reversed"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="owl-item" style="width: 1140px; margin-right: 10px;">
-                            <div class="client">
-                                <h3>- Jessie J -</h3><span>ui / ux designer</span>
-                                <div class="stars">
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                </div>
-                                <div class="opinion">
-                                    <i class="ion-quote"></i>
-                                    <p>Credibly aggregate low-risk high-yield opportunities after e-business expertise. Distinctively brand front-end sources with bricks-and-clicks supply chains. Rapidiously engineer ubiquitous e-commerce rather than virtual
-                                        process.</p>
-                                    <i class="ion-quote reversed"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="owl-item cloned active" style="width: 1140px; margin-right: 10px;">
-                            <div class="client">
-                                <h3>- Kenny John -</h3><span>UI designer</span>
-                                <div class="stars">
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star-half"></span>
-                                </div>
-                                <div class="opinion">
-                                    <i class="ion-quote"></i>
-                                    <p>Professionally expedite clicks-and-mortar methods of empowerment through excellent convergence. Efficiently strategize user friendly e-commerce before technically sound interfaces. Professionally harness one-to-one
-                                        outsourcing whereas future-proof.</p>
-                                    <i class="ion-quote reversed"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="owl-item cloned" style="width: 1140px; margin-right: 10px;">
-                            <div class="client">
-                                <h3>- Will hans -</h3><span>Ux designer</span>
-                                <div class="stars">
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star"></span>
-                                    <span class="ion-android-star-half"></span>
-                                </div>
-                                <div class="opinion">
-                                    <i class="ion-quote"></i>
-                                    <p>Assertively innovate technically sound process improvements with best-of-breed users. Seamlessly matrix dynamic processes rather than multimedia based scenarios. Seamlessly myocardinate front-end e-commerce vis-a-vis
-                                        state of the art core competencies. Energistically create intermandated models.</p>
-                                    <i class="ion-quote reversed"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="owl-controls">
-                    <div class="owl-nav">
-                        <div class="owl-prev" style="display: none;">prev</div>
-                        <div class="owl-next" style="display: none;">next</div>
-                    </div>
-                    <div class="owl-dots" style="display: none;"></div>
-                </div>
+            <div class="qoute-wrapper">
+                <p class="words"><span class="quote-mark open">"</span>If you believe in victory, then victory will believe in you.<span class="quote-mark end">"</span></p>
+                <p class="author">- Paulo Coelho -</p>
             </div>
         </div>
     </div>
-    <!-- End Testmonials Section -->
+    <!-- End Quote Section -->
 
     <!-- Start Contact Section -->
     <div class="contact center" id="contact-me">
@@ -553,8 +363,8 @@
                     <i class="ion-email center"></i>
                     <div class="info-content">
                         <h3>Send a message</h3>
-                        <span><%= link_to "[my-username]@gmail.com", "mailto:username@gmail.com" %></span>
-                        <span>Github: <%= link_to @user.github, "https://github.com/#{@user.github}" %></span>
+                        <span><a href="mailto:username@gmail.com">[my-username]@gmail.com</a></span>
+                        <span>Github: <a href="https://github.com/ftuyama">ftuyama</a></span>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12 info">
@@ -568,12 +378,13 @@
                     <i class="ion-ios-clock center"></i>
                     <div class="info-content">
                         <h3>Work time</h3>
-                        <span>Weekday : 12.00 - 20.00 </span>
-                        <span>Weekend : 12.00 - 16.00 </span>
+                        <span>Weekday : 8.00 - 17.00 </span>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+    <!-- End Contact Section -->
 
     <!-- Start Technical Skills Section -->
     <div class="technical-skills center" id="skills">
@@ -601,7 +412,7 @@
                         <span><span id="chart_num_2">0</span> %</span>
                     </div>
                     <h2>Vue.js</h2>
-                    <h2>Front skills</h2>
+                    <h2>Angular</h2>
                 </div>
                 <!-- main skill No. 3 -->
                 <div class="skill col-md-3 col-sm-6">
@@ -714,6 +525,7 @@
     </div>
     <!-- End Services Section -->
 
+    <div>
         <!-- Google Map -->
         <div id="map" style="position: relative; overflow: hidden;">
             <div style="height: 100%; width: 100%; position: absolute; top: 0px; left: 0px; background-color: rgb(229, 227, 223);">
@@ -921,7 +733,6 @@
     </div>
     </div>
     </div>
-    <!-- End Contact Section -->
 
 
     <!-- Start Footer Section -->
